ecmascript/parser/tests/typescript-errors/tsc/async/es6/asyncDeclare_es6/input.ts.stderr
error[1042]: `async` modifier cannot be used here.
 --> $DIR/tests/typescript-errors/tsc/async/es6/asyncDeclare_es6/input.ts:3:9
  |
3 | declare async function foo(): Promise<void>;
  |         ^^^^^

